--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,25 @@ body {
 
 @media screen and (max-width: 768px) {
     .site-header {
-        background-color: #f00;
+        padding: 10px 20px;
+        height: 50px;
     }
     .logo {
-        width: 100px;
+        width: 200px;
+    }
+
+    .contact-text {
+        display: none;
+    }
+
+    .contact-link {
+        justify-content: center;
+        height: 100%;
+    }
+
+    .mailbox {
+        margin-bottom: 0;
+        width: 32px;
+        height: 22px;
     }
 }
