--- a/css/common.css
+++ b/css/common.css
@@ -1,72 +1,71 @@
-@charset 'utf-8' ;
+@charset "utf-8";
 
 body {
-    font-family: 'Noto Sans JP', sans-serif;
-    background-color: #fff;
-    color: #000;
+  font-family: "Noto Sans JP", sans-serif;
+  background-color: #fff;
+  color: #000;
 }
 
-
 .site-header {
-    /* ヘッダー */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #61472E;
-    color: #fff;
-    padding: 10px 30px;
+  /* ヘッダー */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #61472e;
+  color: #fff;
+  padding: 10px 30px;
 }
 
 .logo {
-    width: 300px;
-    height: auto;
-    vertical-align: bottom;
-  }
+  width: 300px;
+  height: auto;
+  vertical-align: bottom;
+}
 
 .header-right .contact-link {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: #fff;
-    text-decoration: none;
-    font-size: 14px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+  text-decoration: none;
+  font-size: 14px;
 }
 
 .mailbox {
-    width: 35px;
-    height: auto;
-    margin-bottom: 10px;
+  width: 35px;
+  height: auto;
+  margin-bottom: 10px;
 }
 
 .site-footer {
-    /* フッター */
-    background-color: #61472E;
-    color: #fff;
-    text-align: center;
-    padding: 20px 0;
-    font-size: 14px;
-  }
+  /* フッター */
+  background-color: #61472e;
+  color: #fff;
+  text-align: center;
+  padding: 20px 0;
+  font-size: 14px;
+}
 
 @media screen and (max-width: 768px) {
-    .site-header {
-        padding: 10px 20px;
-        height: 50px;
-    }
-    .logo {
-        width: 200px;
-    }
+  .site-header {
+    padding: 10px 20px;
+    height: 50px;
+  }
+  .logo {
+    width: 200px;
+  }
 
-    .contact-text {
-        display: none;
-    }
+  .contact-text {
+    display: none;
+  }
 
-    .contact-link {
-        justify-content: center;
-        height: 100%;
-    }
+  .contact-link {
+    justify-content: center;
+    height: 100%;
+  }
 
-    .mailbox {
-        margin-bottom: 0;
-        width: 32px;
-    }
+  .mailbox {
+    margin-bottom: 0;
+    width: 32px;
+  }
 }
