WordPress組み込み内容を反映

--- a/cms/wp-content/themes/yataka/css/contact/style.css
+++ b/cms/wp-content/themes/yataka/css/contact/style.css
@@ -293,9 +293,10 @@
 }
 
 .wpcf7-spinner {
-  position: absolute;
+  position: absolute !important;
   top: 50%;
   left: 50%;
+  margin: auto !important;
   transform: translate(-50%, -50%);
 }
 
