--- a/css/contact/style.css
+++ b/css/contact/style.css
@@ -217,6 +217,7 @@
 
 /* 送信ボタン（button指定） */
 .form-button {
+  width: 100%;
   position: relative;
   margin: 0 auto 100px;
 }
@@ -293,9 +294,10 @@
 }
 
 .wpcf7-spinner {
-  position: absolute;
+  position: absolute !important;
   top: 50%;
   left: 50%;
+  margin: auto !important;
   transform: translate(-50%, -50%);
 }
 
@@ -330,6 +332,10 @@
   }
   .form-row input,
   .form-row textarea {
+    width: 100%;
+  }
+
+  .contact-submit {
     width: 100%;
   }
 }
